Some minor clean-up with some small fixes and additions.

--- a/content/projects/gotth-wow-tracker.mdx
+++ b/content/projects/gotth-wow-tracker.mdx
@@ -1,12 +1,14 @@
 ---
 title: GoTTH Stack WoW-Tracker
 summary: A web-app built using the GoTTH-stack to track mythic-plus progression.
-image:
+image: /images/projects/wow-tracker-image.png
 author: "Martin Leo"
 publishedAt: 2025-07-10
 ---
 
 A simple web-app for tracking some information about World of Warcraft characters. A user can import their character and see some information about that characters equipped gear, talents, and mythic+ progression.
+
+Check out the source code [here](https://github.com/Leo-Mart/Exam-Goth-Stack)
 
 ## Tech Stack
 
@@ -38,4 +40,3 @@ Working with the Blizzard API was sometimes a bit tedious, if nothing else becau
 One could most likely keep building this out as much as one would want to. I would like to keep building on it and bring in some more information from the Blizzard API to add in additional features or information to track.
 
 I would like to refactor the code at some point as well, taking into the lesson I learned and applying those to make the code-base cleaner and better structured.
-
