--- a/content/projects/nextjs-portfolio.mdx
+++ b/content/projects/nextjs-portfolio.mdx
@@ -1,27 +1,27 @@
 ---
 title: NextJS Portfolio
 summary: A portfolio page built using NextJS, Tailwind, and MDX files.
-image:
-author: 'Martin Leo'
+image: /images/projects/portfolio-image.png
+author: "Martin Leo"
 publishedAt: 2025-07-10
 ---
 
+A portfolio built for a few reasons:
 
+- **_One:_** to practice programming and build stuff.
+- **_Secondly:_** To have a place to showcase my work and maybe occasionally share some reflections about programming, games, art or whatever strikes my fancy.
+- **_Thirdly:_** To hopefully aid in the hunt for a job.
 
-A portfolio built for a few reasons: 
-
-- ***One:*** to practice programming and build stuff. 
-- ***Secondly:*** To have a place to showcase my work and maybe occasionally share some reflections about programming, games, art or whatever strikes my fancy.
-- ***Thirdly:*** To hopefully aid in the hunt for a job.
+Check out the source code [here](https://github.com/Leo-Mart/NextJS_Portfolio)
 
 ## Tech Stack
 
-The stack uses NextJS which has proven to be really quite nice to work with. 
+The stack uses NextJS which has proven to be really quite nice to work with.
 
-- [***NextJS***](https://nextjs.org/)
-- [***MDX***](https://mdxjs.com/)
-- [***Tailwind***](https://tailwindcss.com/)
-- [***Vercel***](https://vercel.com/)
+- [**_NextJS_**](https://nextjs.org/)
+- [**_MDX_**](https://mdxjs.com/)
+- [**_Tailwind_**](https://tailwindcss.com/)
+- [**_Vercel_**](https://vercel.com/)
 
 NextJS lets me create a statically rendered page with relative ease while using MDX to create Markdown files (like this one!) and then read them and convert to HTML which lets me quite easily create new blog posts or project pages.
 
@@ -44,5 +44,3 @@ Overall this stack was quite easy to work with. Converting MDX to HTML might be 
 - Potentially fully responsive design.
 - Keep adding new projects and blog posts, maybe use something else to not have to push posts and project-pages to this repo. Git submodules?
 - Maybe plug in a proper backend and database at some point, though I see no reason for this at the moment.
-
- 
